parameterized-macro/tests/fail/inequal_amount_of_arg_order.stderr
error: custom attribute panicked
 --> $DIR/inequal_amount_of_arg_order.rs:3:1
  |
3 | #[parameterized(b = { "a", "b" }, a = { 1, 2, 3 })]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: [parameterized-macro] error: Inconsistent argument list length for 'a'; all inputs (b, a) should have equal length
